1.0.0~alpha18 (2014-08-XX)
- ADD: remove item of search history
- FIX: #28 display 'general' instead of 'like' in settings

1.0.0~alpha17 (2014-08-10)
- ADD: 'Go to CHANNEL' of a selected video
- ADD: Support for 'Subscribe' and 'Unsubscribe' of channels
- ADD: Full support for 'Like'
- ADD: Remove own playlist via context menu
- ADD: Show/Hide 'Browse Channels' via settings
- FIX: Using only thumbnails from API v3 - 'My Subscriptions' is using v2 and returning different thumbnails
- FIX: Displaying false channel in video description
- FIX: Don't update search history before showing the search result

1.0.0~alpha16 (2014-08-08)
- FIX: provide 'Next Page' under 'My Subscriptions' if there are more results
- ADD: Hide and show menu items via settings 
- ADD: Search history (set the size via settings from 0-50 items)

1.0.0~alpha15 (2014-08-04)
- FIX: moved (only) for the subscribtions to V2 to see new uploaded videos

1.0.0~alpha14 (2014-08-03)
- ADD: 'Remove' via context menu for playlists
- ADD: 'Watch Later' via context menu to add a video to the 'Watch Later' playlist
- ADD: Automatic remove from the 'Watch Later' playlists (optional via settings - default = true)
- ADD: Support for history - after playback the video should be added to the history. Not working correct.
- ADD: Fanart for channels. Only if you select a channel directly.
- optimized some of the addon code

1.0.0~alpha13 (2014-08-02)
- FIX: improved token and login validation

1.0.0~alpha12 (2014-08-01)
- ADD: Show 'Published on' and 'Channel' in the description of a video (can be disabled via setting)
- ADD: support for 3D videos (can be disabled via setting)
- Accelerated resolving of video URLs (almost 2x as fast) 

1.0.0~alpha11 (2014-07-30)
- FIX: added a fallback for videos that require a login (works very fast?!?!)
- FIX: if username or password is missing reset the whole token logic 

1.0.0~alpha10 (2014-07-29)
- FIX: improved performance on decoding signatures for some videos 